--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
+
+    implementation 'com.github.florent37:materialtextfield:1.0.7'
+    implementation 'com.github.GwonHyeok:StickySwitch:0.0.15'
 }
