--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,16 @@
                 android:name=".views.ui.activities.AdminAddRoom"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
-        <activity android:name=".views.ui.activities.Login">
-        </activity>
-        <activity android:name=".views.ui.activities.PlayerActvity"
+        <activity android:name=".views.ui.activities.Login"
                   android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".views.ui.activities.PlayerActvity"
+                  android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
