--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,31 +21,34 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0-alpha1'
+    //    implementation 'androidx.appcompat:appcompat:1.1.0-alpha1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     //material design
     implementation 'com.google.android.material:material:1.1.0-alpha02'
-
     //firebase
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.android.support:design:28.0.0'
-
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
-
     implementation 'com.github.florent37:materialtextfield:1.0.7'
     implementation 'com.github.GwonHyeok:StickySwitch:0.0.15'
+    implementation 'com.jpardogo.googleprogressbar:library:1.2.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.ramotion.foldingcell:folding-cell:1.2.2'
 }
