--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.shantunu.encounterarena"
+        applicationId "com.apro.recky.battleSpree"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
