--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.shantunu.encounterarena">
+          package="com.apro.recky.battleSpree">
 
     <application
-            android:name=".AppClass"
+            android:name="com.apro.recky.battleSpree.AppClass"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".views.ui.activities.TermsConditions">
+        <activity android:name="com.apro.recky.battleSpree.views.ui.activities.TermsConditions">
         </activity>
         <activity
-                android:name=".views.ui.activities.TournamentDetails"
+                android:name="com.apro.recky.battleSpree.views.ui.activities.TournamentDetails"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
-        <service android:name=".fcm.FcmService">
+        <service android:name="com.apro.recky.battleSpree.fcm.FcmService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
 
         <activity
-                android:name=".views.ui.activities.AdminAddRoom"
+                android:name="com.apro.recky.battleSpree.views.ui.activities.AdminAddRoom"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".views.ui.activities.Login"
+                android:name="com.apro.recky.battleSpree.views.ui.activities.Login"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter android:label="@string/filter_title_pubg">
                 <action android:name="android.intent.action.VIEW"/>
@@ -53,11 +53,11 @@
             </intent-filter>
         </activity>
         <activity
-                android:name=".views.ui.activities.PlayerActvity"
+                android:name="com.apro.recky.battleSpree.views.ui.activities.PlayerActvity"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-                android:name=".views.ui.activities.Splash"
+                android:name="com.apro.recky.battleSpree.views.ui.activities.Splash"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
