--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,15 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:replace="android:label">
-        <activity android:name=".views.ui.activities.UserWallet">
+        <activity android:name=".views.ui.activities.AddMoney"
+                  android:theme="@style/AppTheme.NoActionBar"
+                  android:windowSoftInputMode="stateVisible"
+                  android:configChanges="orientation|screenSize"
+        >
+        </activity>
+        <activity android:name=".views.ui.activities.UserWallet"
+                  android:theme="@style/AppTheme.NoActionBar"
+        >
         </activity>
         <activity android:name=".views.ui.activities.TermsConditions">
         </activity>
