--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
             tools:replace="android:label">
         <activity android:name=".views.ui.activities.AddMoney"
                   android:theme="@style/AppTheme.NoActionBar"
-                  android:windowSoftInputMode="stateVisible"
-                  android:configChanges="orientation|screenSize"
-        >
+                  android:windowSoftInputMode="stateVisible|adjustResize"
+                  android:configChanges="orientation|screenSize">
         </activity>
         <activity android:name=".views.ui.activities.UserWallet"
                   android:theme="@style/AppTheme.NoActionBar"
@@ -41,7 +40,9 @@
         </activity>
         <activity
                 android:name=".views.ui.activities.Login"
-                android:theme="@style/AppTheme.NoActionBar">
+                android:theme="@style/AppTheme.NoActionBar"
+                android:windowSoftInputMode="stateAlwaysHidden"
+        >
             <intent-filter android:label="@string/filter_title_pubg">
                 <action android:name="android.intent.action.VIEW"/>
 
