--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -13,6 +15,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -27,26 +30,35 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+    maven {
+        url "https://s3-ap-southeast-1.amazonaws.com/godel-release/godel/"
+    }
+}
+
 dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    
+    implementation 'ai.devsupport.instamojo:instamojolib:0.1.6'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     //    implementation 'androidx.appcompat:appcompat:1.1.0-alpha1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     //material design
-    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    implementation 'com.google.android.material:material:1.1.0-alpha03'
     //firebase
     implementation 'com.google.firebase:firebase-auth:16.1.0'
-    implementation 'com.google.firebase:firebase-core:16.0.6'
-    implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-core:16.0.7'
+    implementation 'com.google.firebase:firebase-database:16.0.6'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
     implementation 'com.github.florent37:materialtextfield:1.0.7'
@@ -56,14 +68,13 @@ dependencies {
     implementation 'com.ramotion.foldingcell:folding-cell:1.2.2'
 
     // room
-    def room_version = "2.1.0-alpha03"
+    def room_version = "2.1.0-alpha04"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
 
-    def paging_version = "2.1.0-rc01"
+    def paging_version = "2.1.0"
 
     implementation "androidx.paging:paging-runtime-ktx:$paging_version" // use -ktx for Kotlin
 
@@ -80,10 +91,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
 
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    //rxjava2
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
-}
+    //multidex
+    implementation 'com.android.support:multidex:1.0.3'
 
-apply plugin: 'kotlin-kapt'
+}
