--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:replace="android:label">
+        <activity android:name=".views.ui.activities.player.PlayerResults"
+                  android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity android:name=".views.ui.activities.admin.ResultsActivity">
         </activity>
         <activity android:name=".views.ui.activities.admin.UpdateResults">
@@ -52,11 +55,14 @@
         <activity
                 android:name=".views.ui.activities.admin.AdminAddRoom"
                 android:theme="@style/AppTheme.NoActionBar">
+
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            -->
         </activity>
         <activity
                 android:name=".views.ui.activities.player.Login"
@@ -86,14 +92,11 @@
         <activity
                 android:name=".views.ui.activities.player.Splash"
                 android:theme="@style/AppTheme.NoActionBar">
-
-            <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-            -->
         </activity>
 
         <meta-data
