completed the withdraw part for admin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,12 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:replace="android:label">
-        <activity android:name=".views.ui.activities.player.TransactionsActivity"
-                  android:theme="@style/AppTheme.NoActionBar"
-        >
+        <activity android:name=".views.ui.activities.admin.AdminWithdrawals"
+                  android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
+                android:name=".views.ui.activities.player.TransactionsActivity"
+                android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
                 android:name=".views.ui.activities.player.PlayerResults"
@@ -60,14 +63,11 @@
         <activity
                 android:name=".views.ui.activities.admin.AdminAddRoom"
                 android:theme="@style/AppTheme.NoActionBar">
-
-            <!--
-            <intent-filter>
+           <!-- <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-            -->
+            </intent-filter>-->
         </activity>
         <activity
                 android:name=".views.ui.activities.player.Login"
